--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-amplify/auth": "^6.0.16",
+    "@aws-amplify/ui-react": "^6.1.3",
+    "aws-amplify": "^6.0.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
