--- a/package.json
+++ b/package.json
@@ -12,11 +12,18 @@
   "dependencies": {
     "@aws-amplify/auth": "^6.0.16",
     "@aws-amplify/ui-react": "^6.1.3",
+    "@hassanmojab/react-modern-calendar-datepicker": "^3.1.7",
     "aws-amplify": "^6.0.16",
+    "chart.js": "^4.4.2",
+    "chartjs-plugin-annotation": "^3.0.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "^18.2.0",
+    "react-dropdown-select": "^4.11.2",
+    "react-select": "^5.8.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^8.4.1",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
