--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aws-amplify": "^6.0.16",
     "chart.js": "^4.4.2",
     "chartjs-plugin-annotation": "^3.0.1",
+    "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^18.2.55",
     "@types/react-dom": "^18.2.19",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
