--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aws-amplify": "^6.0.16",
     "chart.js": "^4.4.2",
     "chartjs-plugin-annotation": "^3.0.1",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "lodash-es": "^4.17.21",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
